--- a/.drone.yml
+++ b/.drone.yml
@@ -24,5 +24,5 @@ steps:
       - >
         docker run --restart=always --name=pywebio-demos -v $PWD:/app_tmp
         --label="traefik.http.services.pywebiodemos.loadbalancer.server.port=80"
-        -d python:3 bash -c "cp -r /app_tmp /app && cd /app && pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple . && python3 -m demos --port=80"
+        -d python:3 bash -c "cp -r /app_tmp /app && cd /app && pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple . && cd docs && CODE_EXPORT_PATH=/app/demos/doc_domes make clean text && cd /app && python3 -m demos --port=80"
       - sleep 5  # wait container start
